# DocFusioner-server

./: .env.example  .gitignore  pyproject.toml
app/: config.py  exceptions.py  main.py
app/models/: __init__.py  database.py  orm.py  schemas.py
app/services/: __init__.py  config_service.py  llm_adapter.py
app/services/parser/: __init__.py  base.py
app/utils/: file_utils.py  time_utils.py
app/vector_store/: __init__.py  chroma_manager.py  types.py
data/: README.md
tests/: conftest.py  test_chroma_manager.py  test_config.py  test_config_service.py  test_database.py  test_exceptions.py  test_file_utils.py  test_integration.py  test_llm_adapter.py  test_models_init.py  test_orm.py  test_parser_base.py  test_schemas.py  test_utils.py  test_vector_types.py
